--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ package-mode = false
 python = "^3.12"
 sqlalchemy = "^2.0.31"
 psycopg2-binary = "^2.9.9"
+python-dateutil = "^2.9.0.post0"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
