--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.10"
 sqlalchemy = "^2.0.31"
 psycopg2-binary = "^2.9.9"
 python-dateutil = "^2.9.0.post0"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+schedule = "^1.2.2"
 
 
 [build-system]
